# SPDX-FileCopyrightText: 2022 - 2023 Robin Vobruba <hoijui.quaero@gmail.com>
# SPDX-FileCopyrightText: 2020 Armin Becher <becherarmin@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "mle"
version = "0.23.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    The markup link extractor (mle) extracts links
    from markup files (Markdown and HTML).
    """
repository = "https://github.com/hoijui/mle"
homepage = "https://github.com/hoijui/mle"
documentation = "https://docs.rs/mle"
keywords = ["link-extractor", "links", "markup", "html", "markdown"]
categories = ["command-line-utilities", "text-processing", "filesystem"]
readme = "README.md"
edition = "2021"

[lints.rust]
rust_2021_compatibility = "warn"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
#wildcard_enum_match_arm = "warn"
#string_slice = "warn"
#indexing_slicing = "warn"
#clone_on_ref_ptr = "warn"
#try_err = "warn"
shadow_reuse = "warn"
#single_char_lifetime_names = "warn"
#empty_structs_with_brackets = "warn"
#else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
# NOTE allowed because:
#      If the same regex is going to be applied to multiple inputs,
#      the precomputations done by Regex construction
#      can give significantly better performance
#      than any of the `str`-based methods.
trivial_regex = "allow"
struct_excessive_bools = "allow"
#fn_params_excessive_bools = "allow"

[dependencies]
async-std = "1.9.0"
clap = { version = "4.1", features = ["cargo", "wrap_help"] }
colored = "2"
const_format = "0.2"
csv = "1.1"
# email_address = "0.2"
env_logger = "0.10"
futures = "0.3"
git-version = "0.3"
lazy_static = "1.4.0"
log = "0.4.11"
#pulldown-cmark = {git = "https://github.com/lo48576/pulldown-cmark", branch="feature/heading-attrs"}
pulldown-cmark = "0.9.2"
regex = "1"
relative-path = { version = "1.7", features = ["serde"] }
reqwest = { version = "0.11.3", features = ["native-tls-vendored"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
simplelog = "0.12"
thiserror = "1.0"
tokio = { version = "1.5", features = ["rt-multi-thread", "macros", "time"] }
url = { version = "2.2", features = ["serde"] }
walkdir = "2.3.1"
wildmatch = "2.1.0"

[dev-dependencies]
criterion = "0.5"
ntest = "0.9"

[[bench]]
name = "benchmarks"
harness = false
