# SPDX-FileCopyrightText: 2022 - 2023 Robin Vobruba <hoijui.quaero@gmail.com>
# SPDX-FileCopyrightText: 2020 Armin Becher <becherarmin@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "mle"
version = "0.27.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    The markup link extractor (mle) extracts links
    from markup files (Markdown and HTML).
    """
repository = "https://github.com/hoijui/mle"
homepage = "https://github.com/hoijui/mle"
documentation = "https://docs.rs/mle"
keywords = ["link-extractor", "links", "markup", "html", "markdown"]
categories = ["command-line-utilities", "text-processing", "filesystem"]
readme = "README.md"
edition = "2024"
publish = true

[lints.rust]
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
#wildcard_enum_match_arm = "warn"
#string_slice = "warn"
#indexing_slicing = "warn"
#clone_on_ref_ptr = "warn"
#try_err = "warn"
shadow_reuse = "warn"
#single_char_lifetime_names = "warn"
#empty_structs_with_brackets = "warn"
#else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
# NOTE allowed because:
#      If the same regex is going to be applied to multiple inputs,
#      the pre-computations done by Regex construction
#      can give significantly better performance
#      than any of the `str`-based methods.
trivial_regex = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }

[dependencies]
async-std = { version = "1.13" }
async-trait = { version = "0.1" }
clap = { version = "4.5", features = ["cargo", "wrap_help"] }
cli_utils = { version = "0.13", package = "cli_utils_hoijui", default-features = false, features = ["async", "serde", "ignore_path", "file_traversal"] }
# cli_utils = { path = "../cli-utils-rs", package = "cli_utils_hoijui", default-features = false, features = ["async", "serde", "ignore_path", "file_traversal"] }
colored = { version = "2.1.0", default-features = false }
const_format = { version = "0.2", default-features = false }
# csv = { version = "1.4", default-features = false }
csv-async = { version = "1.3", default-features = false, features = ["with_serde"] }
dynify = { version = "0.1" }
# email_address = "0.2"
env_logger = { version = "0.11", default-features = false }
futures = { version = "0.3", default-features = false }
git-version = { version = "0.3", default-features = false }
log = { version = "0.4", default-features = false }
pulldown-cmark = { version = "0.13", default-features = false }
regex = { version = "1.12", default-features = false }
relative-path = { version = "2.0", default-features = false, features = ["alloc", "serde", "std"] }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_regex = { version = "1.1", default-features = false }
simplelog = { version = "0.12", default-features = false }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.49", default-features = false, features = ["rt-multi-thread", "macros", "time", "sync"] }
url = { version = "2.5", default-features = false, features = ["serde"] }
wildmatch = { version = "2.5", default-features = false, features = [ "serde" ] }

[dev-dependencies]
async-walkdir = { version = "2.1", default-features = false }
criterion = { version = "0.8", default-features = false }
ntest = { version = "0.9", default-features = false }
tokio-test = "0.4"

[[bench]]
name = "benchmarks"
harness = false
